this is commit lecture 3

--- a/notebooks/lecture3-notebook.ipynb
+++ b/notebooks/lecture3-notebook.ipynb
@@ -42,6 +42,323 @@
    "source": [
     "\"Hello World\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6290\n",
+      "value is 6290\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "value = random.randint(1000,9999)\n",
+    "print(value)\n",
+    "\n",
+    "if value % 2 == 1:\n",
+    "    print(\"value is odd\")\n",
+    "print(\"value is\", value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evens = 0\n",
+    "odds = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7054\n",
+      "value is 7054\n",
+      "odds 7\n",
+      "evens 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = random.randint(1000,9999)\n",
+    "print(value)\n",
+    "\n",
+    "if value % 2 == 1:\n",
+    "    print(\"value is odd\")\n",
+    "    odds = odds + 1\n",
+    "else:\n",
+    "    evens += 1\n",
+    "print(\"value is\", value)\n",
+    "print(\"odds\", odds)\n",
+    "print(\"evens\", evens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8478\n",
+      "value is 8478\n",
+      "odds 7\n",
+      "evens 15\n",
+      "6763\n",
+      "value is odd\n",
+      "value is 6763\n",
+      "odds 8\n",
+      "evens 15\n",
+      "1313\n",
+      "value is odd\n",
+      "value is 1313\n",
+      "odds 9\n",
+      "evens 15\n",
+      "5226\n",
+      "value is 5226\n",
+      "odds 9\n",
+      "evens 16\n",
+      "9707\n",
+      "value is odd\n",
+      "value is 9707\n",
+      "odds 10\n",
+      "evens 16\n",
+      "1839\n",
+      "value is odd\n",
+      "value is 1839\n",
+      "odds 11\n",
+      "evens 16\n",
+      "9037\n",
+      "value is odd\n",
+      "value is 9037\n",
+      "odds 12\n",
+      "evens 16\n",
+      "6441\n",
+      "value is odd\n",
+      "value is 6441\n",
+      "odds 13\n",
+      "evens 16\n",
+      "9774\n",
+      "value is 9774\n",
+      "odds 13\n",
+      "evens 17\n",
+      "3713\n",
+      "value is odd\n",
+      "value is 3713\n",
+      "odds 14\n",
+      "evens 17\n",
+      "4668\n",
+      "value is 4668\n",
+      "odds 14\n",
+      "evens 18\n",
+      "2331\n",
+      "value is odd\n",
+      "value is 2331\n",
+      "odds 15\n",
+      "evens 18\n",
+      "3017\n",
+      "value is odd\n",
+      "value is 3017\n",
+      "odds 16\n",
+      "evens 18\n",
+      "9652\n",
+      "value is 9652\n",
+      "odds 16\n",
+      "evens 19\n",
+      "3233\n",
+      "value is odd\n",
+      "value is 3233\n",
+      "odds 17\n",
+      "evens 19\n",
+      "8374\n",
+      "value is 8374\n",
+      "odds 17\n",
+      "evens 20\n",
+      "7202\n",
+      "value is 7202\n",
+      "odds 17\n",
+      "evens 21\n",
+      "9828\n",
+      "value is 9828\n",
+      "odds 17\n",
+      "evens 22\n",
+      "9345\n",
+      "value is odd\n",
+      "value is 9345\n",
+      "odds 18\n",
+      "evens 22\n",
+      "6793\n",
+      "value is odd\n",
+      "value is 6793\n",
+      "odds 19\n",
+      "evens 22\n",
+      "6374\n",
+      "value is 6374\n",
+      "odds 19\n",
+      "evens 23\n",
+      "7836\n",
+      "value is 7836\n",
+      "odds 19\n",
+      "evens 24\n",
+      "5918\n",
+      "value is 5918\n",
+      "odds 19\n",
+      "evens 25\n",
+      "3478\n",
+      "value is 3478\n",
+      "odds 19\n",
+      "evens 26\n",
+      "4624\n",
+      "value is 4624\n",
+      "odds 19\n",
+      "evens 27\n",
+      "8894\n",
+      "value is 8894\n",
+      "odds 19\n",
+      "evens 28\n",
+      "2563\n",
+      "value is odd\n",
+      "value is 2563\n",
+      "odds 20\n",
+      "evens 28\n",
+      "1784\n",
+      "value is 1784\n",
+      "odds 20\n",
+      "evens 29\n",
+      "4597\n",
+      "value is odd\n",
+      "value is 4597\n",
+      "odds 21\n",
+      "evens 29\n",
+      "1947\n",
+      "value is odd\n",
+      "value is 1947\n",
+      "odds 22\n",
+      "evens 29\n",
+      "9403\n",
+      "value is odd\n",
+      "value is 9403\n",
+      "odds 23\n",
+      "evens 29\n",
+      "1419\n",
+      "value is odd\n",
+      "value is 1419\n",
+      "odds 24\n",
+      "evens 29\n",
+      "2870\n",
+      "value is 2870\n",
+      "odds 24\n",
+      "evens 30\n",
+      "6350\n",
+      "value is 6350\n",
+      "odds 24\n",
+      "evens 31\n",
+      "7826\n",
+      "value is 7826\n",
+      "odds 24\n",
+      "evens 32\n",
+      "6388\n",
+      "value is 6388\n",
+      "odds 24\n",
+      "evens 33\n",
+      "3574\n",
+      "value is 3574\n",
+      "odds 24\n",
+      "evens 34\n",
+      "7682\n",
+      "value is 7682\n",
+      "odds 24\n",
+      "evens 35\n",
+      "8248\n",
+      "value is 8248\n",
+      "odds 24\n",
+      "evens 36\n",
+      "7996\n",
+      "value is 7996\n",
+      "odds 24\n",
+      "evens 37\n",
+      "8779\n",
+      "value is odd\n",
+      "value is 8779\n",
+      "odds 25\n",
+      "evens 37\n",
+      "2403\n",
+      "value is odd\n",
+      "value is 2403\n",
+      "odds 26\n",
+      "evens 37\n",
+      "1517\n",
+      "value is odd\n",
+      "value is 1517\n",
+      "odds 27\n",
+      "evens 37\n",
+      "5407\n",
+      "value is odd\n",
+      "value is 5407\n",
+      "odds 28\n",
+      "evens 37\n",
+      "8920\n",
+      "value is 8920\n",
+      "odds 28\n",
+      "evens 38\n",
+      "7122\n",
+      "value is 7122\n",
+      "odds 28\n",
+      "evens 39\n",
+      "5560\n",
+      "value is 5560\n",
+      "odds 28\n",
+      "evens 40\n",
+      "2189\n",
+      "value is odd\n",
+      "value is 2189\n",
+      "odds 29\n",
+      "evens 40\n",
+      "5016\n",
+      "value is 5016\n",
+      "odds 29\n",
+      "evens 41\n",
+      "1587\n",
+      "value is odd\n",
+      "value is 1587\n",
+      "odds 30\n",
+      "evens 41\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "while count < 50:\n",
+    "    value = random.randint(1000,9999)\n",
+    "    print(value)\n",
+    "\n",
+    "    if value % 2 == 1:\n",
+    "        print(\"value is odd\")\n",
+    "        odds = odds + 1\n",
+    "    else:\n",
+    "        evens += 1\n",
+    "    print(\"value is\", value)\n",
+    "    print(\"odds\", odds)\n",
+    "    print(\"evens\", evens)\n",
+    "    count += 1"
+   ]
   }
  ],
  "metadata": {
